<resources>
    <string name="app_name">TaskMate</string>
    <string name="add_task">Add Task</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_task">Enter Task</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="set_time">Set Time</string>
    <string name="_00_00">00:00</string>
    <string name="home">Home</string>
    <string name="timer">Timer</string>
    <string name="reminder">Reminder</string>
    <string name="add_task1">Add Task</string>
</resources>